# latent_unet

./: .gitignore  6_26_2025_revised_file_layout.py  7_5_2025_final_design_planning.py  README.md  ci.yaml  pyproject.toml  pytest.ini  run.py
configs/: mock_data_config.yaml  test_config.yaml  unet_config.yaml
data/: __init__.py  basic_dataset.py  caption_dataset.py  dataloader_stub.py  dataset_registry.py  loader.py  mock_dataset.py  simple_dataset_loader.py  tokenizer.py  transforms.py
diffusion/: ddim.py  ddpm.py  edm.py  forward_process.py  sampler_registry.py  sampler_utils.py  schedule.py
diffusion/samplers/: base.py
helpers/: dummy_data.py  fake_model.py  mock_configs.py  patch_context.py  test_utils.py
model/: build_unet.py  config.py  model_stub.py  unet.py
modules/: down_block.py  final_head.py  mid_block.py  norm_utils.py  residual_block.py  time_embedding.py  up_block.py
modules/attention/: __init__.py  base_attention.py  flash_attention.py  registry.py  vanilla_attention.py  window_attention.py
old_tests/failure_injection/: test_checkpoint_rename_retry.py  (+6 more)
random/: 6_26_2025_revised_file_layout.py  7_5_2025_final_design_planning.py  cfg_passing_notes.py  likes_and_dislikes.py  planning.py  sampling_steps.py
tests/: _hard_timeout.py  conftest.py  helpers_subproc.py
trainer/: cluster_utils.py  ema_utils.py  logger.py  losses.py  optim_utils.py  train_loop.py  train_loop_stub.py
utils/: debug.py  memory_tools.py  postprocess.py  snapshot_tools.py  tensor_inspect.py  vanilla_checkpointing.py  visualizer.py  visualizer_refactor.py
(+93 files in other folders)
